--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:               #http://localhost:4000 # https://taylantatli.github.io/Moon
+url:               https://saiyanide.github.io
 
 # Jekyll
 permalink:          /:title/
