Refined Bio text

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Saiyanide's Tech Blog
-bio:                "Welcome to my Blog! I go by the handle 'Saiyanide', i'm a Cybersec script-kiddie that likes dabbling in Forensics, OSINT, CTFs and the like!
+bio:                "Welcome to my Blog! I go by the handle <b><i>'Saiyanide'</i></b>. &nbsp;I'm a Cybersec script-kiddie that likes dabbling in Forensics, OSINT, CTFs and the like!
   This is my little space to keep track and display many of the projects i'm working on! (ranging from SDR, Games, Music, Languages)."
 description:        "My personal tech blog thingy!"
 reading_time:       true
